--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <title>Your title</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <video id="video">
+  </video>
+  <canvas>
+
+  </canvas>
 </head>
 
 <style>
