--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
   <title>Your title</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <video id="video">
-  </video>
-  <canvas>
+  <div><video id="video" width="640" height="480" autoplay></video></div>
 
-  </canvas>
 </head>
 
 <style>
