--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
       <div><video id="video" width="640" height="480" autoplay></video></div>
 
+    <canvas id="canvas" width="640" height="480"></canvas>
+
+
     <section class='title-area'>
       <h1>TensorFlow.js: Using a Keras model in the browser</h1>
     </section>
