--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div><video id="video" width="640" height="480" autoplay></video></div>
 
-    <canvas id="canvas" width="640" height="480"></canvas>
+    <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
 
 
     <section class='title-area'>
