--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
     <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
 
+    <div id="console"></div>
 
     <section class='title-area'>
       <h1>TensorFlow.js: Using a Keras model in the browser</h1>
@@ -67,7 +68,7 @@
       <img style="display: none" id="cat" src="cat.jpg" width=192 height=192 />
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="index.js"></script>
   </div>
 </body>
