--- a/index.html
+++ b/index.html
@@ -1,74 +1,84 @@
 <!doctype html>
 
 <head>
-  <title>Your title</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Your title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <style>
-  .pred-container {
-    margin-bottom: 20px;
-  }
+    .pred-container {
+        margin-bottom: 20px;
+    }
 
-  .pred-container > div {
-    display: inline-block;
-    margin-right: 20px;
-    vertical-align: top;
-  }
+    .pred-container > div {
+        display: inline-block;
+        margin-right: 20px;
+        vertical-align: top;
+    }
 
-  .row {
-    display: table-row;
-  }
-  .cell {
-    display: table-cell;
-    padding-right: 20px;
-  }
+    .row {
+        display: table-row;
+    }
 
-  #file-container {
-    margin-bottom: 20px;
-  }
+    .cell {
+        display: table-cell;
+        padding-right: 20px;
+    }
+
+    #file-container {
+        margin-bottom: 20px;
+    }
 </style>
 
 <body>
-  <div class="tfjs-example-container">
+<div class="tfjs-example-container">
 
-      <div><video id="video" width="640" height="480" autoplay></video></div>
+    <div>
+        <video id="video" width="640" height="480" autoplay></video>
+    </div>
 
     <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
 
     <div id="console"></div>
 
     <section class='title-area'>
-      <h1>TensorFlow.js: Using a Keras model in the browser</h1>
+        <h1>TensorFlow.js: Using a Keras model in the browser</h1>
     </section>
 
     <section>
-      <p class='section-head'>Description</p>
-      <p>
-        This file is based on <a>https://github.com/tensorflow/tfjs-examples/tree/master/mobilenet</a>.
-      </p>
+        <p class='section-head'>Description</p>
+        <p>
+            This file is based on
+        <ul>
+            <li>
+                <a>https://codelabs.developers.google.com/codelabs/tensorflowjs-teachablemachine-codelab/index.html#5</a>
+            </li>
+            <li><a>https://github.com/tensorflow/tfjs-examples/tree/master/mobilenet</a></li>
+        </ul>
+
+        </p>
     </section>
 
     <section>
-      <p class='section-head'>Status</p>
-      <div id="status"></div>
+        <p class='section-head'>Status</p>
+        <div id="status"></div>
     </section>
 
     <section>
-      <p class='section-head'>Model Output</p>
+        <p class='section-head'>Model Output</p>
 
-      <div id="file-container" style="display: none">
-        Upload an image: <input type="file" id="files" name="files[]" multiple />
-      </div>
+        <div id="file-container" style="display: none">
+            Upload an image: <input type="file" id="files" name="files[]" multiple/>
+        </div>
 
-      <div id="predictions"></div>
+        <div id="predictions"></div>
 
-      <img style="display: none" id="cat" src="cat.jpg" width=192 height=192 />
+        <img style="display: none" id="inputImage" src="cat.jpg" width=192 height=192/>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="index.js"></script>
-  </div>
+</div>
 </body>
