--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div id="predictions"></div>
 
-        <img style="display: none" id="inputImage" src="cat.jpg" width=192 height=192/>
+        <img style="display: none" id="imageInput" src="cat.jpg" width=192 height=192/>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
