--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
     <section>
         <p class='section-head'>Model Output</p>
 
-        <div id="file-container" style="display: none">
-            Upload an image: <input type="file" id="files" name="files[]" multiple/>
-        </div>
+<!--        <div id="file-container" style="display: none">-->
+<!--            Upload an image: <input type="file" id="files" name="files[]" multiple/>-->
+<!--        </div>-->
 
         <div id="predictions"></div>
-
-        <img style="display: none" id="imageInput" src="cat.jpg" width=192 height=192/>
+        <p>Image being used for prediction</p>
+        <img id="imageInput" src="cat.jpg" width=192 height=192/>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
