--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     <section>
         <p class='section-head'>Model Output</p>
 
-<!--        <div id="file-container" style="display: none">-->
-<!--            Upload an image: <input type="file" id="files" name="files[]" multiple/>-->
-<!--        </div>-->
+        <div id="file-container" style="display: none">
+            Upload an image: <input type="file" id="files" name="files[]" multiple/>
+        </div>
 
         <div id="predictions"></div>
         <p>Image being used for prediction</p>
