adding overlay cleaning up project

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <div class="webcamVideo">
             <video id="video" width="192" height="192" autoplay></video>
         </div>
+        <h2>Please put on your mask to proceed</h2>
     </div>
 
 
