fixing up console

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="webcamVideo">
             <video id="video" width="192" height="192" autoplay></video>
         </div>
-        <div id="console"></div>
+        <div id="console" style="color: white;"></div>
 
     </div>
 
